fix spelling and standardize the name of the game with a space

--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -20,8 +20,8 @@
         "add-version": "Ajouter une version",
         "settings": "Paramètres",
         "shared": {
-            "text": "Partagés",
-            "tooltip": "Contenus partagés"
+            "text": "Partagé",
+            "tooltip": "Contenu partagé"
         }
     },
     "pages": {
@@ -31,7 +31,7 @@
         "version-viewer": {
             "launch-mods": {
                 "oculus": "Mode Oculus",
-                "oculus-description": "Si vous utilisez Beat Saber via Steam, cela vous permet d'utiliser le compositeur VR d'Oculus sans passer par SteamVR, pour gagner en performances. Ceci n'est pas nécessaire pour utiliser les casques Oculus.",
+                "oculus-description": "Si vous utilisez Beat Saber via Steam, cela vous permet d'utiliser le compositeur VR d'Oculus (sans passer par SteamVR pour gagner en performances). Ceci n'est pas nécessaire pour utiliser les casques Oculus.",
                 "desktop": "Mode FPFC",
                 "desktop-description": "Cela vous permet d'utiliser WASD et la souris pour naviguer dans le menu en jeu. Cela rend les tests beaucoup plus faciles, car vous n'avez pas à mettre votre casque!",
                 "debug": "Mode Debug",
@@ -72,7 +72,7 @@
             },
             "mods": {
                 "loading-mods": "Chargement des mods...",
-                "no-internet": "Pas d'internet",
+                "no-internet": "Pas d'accès Internet",
                 "mods-not-available": "Aucun mod n'est encore disponible pour cette version de Beat Saber",
                 "buttons": {
                     "more-infos": "Plus d'infos",
@@ -94,10 +94,10 @@
                 "open-folder": "Ouvrir le dossier",
                 "verify-files": "Vérifier les fichiers",
                 "clone": "Cloner",
-                "edit": "Editer",
+                "edit": "Modifier",
                 "uninstall": "Désinstaller",
                 "create-shortcut": "Créer un raccourci",
-                "shared-folders": "Dossiers Partagés"
+                "shared-folders": "Dossiers partagés"
             }
         },
         "available-versions": {
@@ -198,11 +198,11 @@
             "errors": {
                 "titles": {
                     "operation-running": "Opération en cours",
-                    "no-internet": "Pas d'internet"
+                    "no-internet": "Pas d'accès Internet"
                 },
                 "msg": {
                     "operation-running": "Attends la fin de l'opération en cours puis recommence.",
-                    "no-internet": "Verifie ta connexion internet et recommence."
+                    "no-internet": "Vérifie ta connexion internet et ressaye."
                 }
             }
         },
@@ -216,21 +216,21 @@
             "warnings": {
                 "msg": {
                     "ConnectionTimeout": "Ta connexion internet semble instable 🥶",
-                    "Unknown": "Quelque chose d'étrange s'est produit 🤔 Votre connexion est surement instable."
+                    "Unknown": "Quelque chose d'étrange s'est produit 🤔 Ta connexion est sûrement instable."
                 }
             },
             "errors": {
                 "titles": {
-                    "dotnet-required": ".NET 6 Requis"
+                    "dotnet-required": "Le framework .NET 6 est requis"
                 },
                 "msg": {
                     "401": "Steam ne semble pas vouloir nous laisser télécharger Beat Saber 😢",
                     "404": "Impossible de contacter les serveurs de Steam.",
                     "Password": "Le mot de passe est invalide.",
-                    "InvalidCredentials": "Identifiants de connexion invalides, connexion non approuvée, ou trop de tentatives de connexion.",
+                    "InvalidCredentials": "Identifiants de connexion invalides, connexion non approuvée ou trop de tentatives de connexion.",
                     "NoManifest": "Aucun manifest n'a été trouvé.",
                     "DirectoryCreate": "Impossible d'installer les dossiers nécessaires.",
-                    "NotAvailableApp": "Tu essayes de télécharger Beat Saber alors que tu ne l'as pas ? 🤣",
+                    "NotAvailableApp": "Tu ne possède pas Beat Saber sur Steam.",
                     "DepotNotFound": "Impossible de télécharger Beat Saber 😥 réessaye plus tard 😕",
                     "NotCompleted": "Le téléchargement n'a pas pu se terminer ¯\\_(ツ)_/¯",
                     "InvalidManifest": "Impossible de télécharger Beat Saber 😥 réessaye plus tard 😕",
@@ -355,7 +355,7 @@
                     "OCULUS_NOT_RUNNING": "Oculus doit être en cours d'exécution pour lancer Beat Saber.",
                     "BS_ALREADY_RUNNING": "Ferme Beat Saber avant de le lancer à nouveau.",
                     "EXE_NOT_FINDED": "Quelques fichiers semblent manquants. Essaye de vérifier les fichiers.",
-                    "EXIT": "BeatSaber s'est arrêté brusquement, essaye de vérifier les fichiers."
+                    "EXIT": "Beat Saber s'est arrêté brusquement, essaye de vérifier les fichiers."
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Lancer Steam"
@@ -371,13 +371,13 @@
         "custom-version": {
             "errors": {
                 "titles": {
-                    "CantEditSteam": "Edition impossible",
+                    "CantEditSteam": "Modification impossible",
                     "CantRename": "Renommage impossible",
                     "VersionAlreadExist": "Cette version existe déjà",
                     "CantClone": "Clonage impossible"
                 },
                 "msg": {
-                    "CantEditSteam": "Tu ne peux pas éditer la version Steam. Tu peux la cloner par contre."
+                    "CantEditSteam": "Tu ne peux pas modifier la version Steam, cependant tu peux la cloner."
                 }
             },
             "success": {
@@ -416,7 +416,7 @@
                     "success": "Mods désintallés 🎉"
                 },
                 "msg": {
-                    "success": "Tous les mods ont été désintallés.",
+                    "success": "Tous les mods ont été désinstallés.",
                     "errors": {
                         "no-mods": "Aucun mod n'est installé dans dans cette version 😑"
                     }
@@ -467,8 +467,8 @@
             "title": "Steam Guard",
             "inputs": {
                 "guard-code": {
-                    "label": "Code Guard",
-                    "placeholder": "Entre ton code Guard"
+                    "label": "Code Steam Guard",
+                    "placeholder": "Entre ton code Steam Guard"
                 }
             },
             "buttons": {
@@ -516,7 +516,7 @@
         },
         "bs-import-version": {
             "title": "Importer une version",
-            "description": "Importe une version de BeatSaber pour profiter des fonctionnalités de BSManager. L'importation copiera le dossier d'installation de BeatSaber sélectionné dans le dossier de versions de BSManager.",
+            "description": "Importe une version de Beat Saber pour profiter des fonctionnalités de BSManager. L'importation copiera le dossier d'installation de Beat Saber sélectionné dans le dossier de versions de BSManager.",
             "buttons": {
                 "submit": "Importer une version"
             }
@@ -536,14 +536,14 @@
             }
         },
         "edit-version": {
-            "title": "Editer la version",
+            "title": "Modifier la version",
             "buttons": {
-                "submit": "Editer"
+                "submit": "Modifier"
             }
         },
         "clone-version": {
             "title": "Cloner la version",
-            "description": "Cloner la version te permet de séparer les contenus additionnels de BeatSaber entre deux mêmes versions.",
+            "description": "Cloner la version te permet de séparer les contenus additionnels de Beat Saber entre deux mêmes versions.",
             "inputs": {
                 "name": {
                     "label": "Nom",
@@ -574,7 +574,7 @@
                 },
                 "desc": {
                     "single": "Es-tu sur de vouloir supprimer la map {name} ?",
-                    "multiple": "Es-tu sur de vouloir supprimer les {nb} maps ?"
+                    "multiple": "Es-tu sur de vouloir supprimer {nb} maps ?"
                 },
                 "info": {
                     "desc": {
@@ -623,7 +623,7 @@
         },
         "shared-folders": {
             "title": "Dossiers Partagés",
-            "description": "Liez les dossiers de BeatSaber pour synchroniser leurs contenus avec les dossiers partagés des autres versions. Notez que la suppression de contenu sera également partagée.",
+            "description": "Liez les dossiers de Beat Saber pour synchroniser leurs contenus avec les dossiers partagés des autres versions. Notez que la suppression de contenu sera également partagée.",
             "buttons": {
                 "add-folder": "Ajouter un dossier",
                 "link-folder": "Lier le dossier",
@@ -690,8 +690,8 @@
             "jpop": "j-pop",
             "rock": "rock",
             "pop": "pop",
-            "electronic": "éléctronique",
-            "classical-orchestral": "Classique & Orchestral"
+            "electronic": "électronique",
+            "classical-orchestral": "classique & orchestrale"
         },
         "map-specificities": {
             "automapper": "IA",
@@ -751,12 +751,12 @@
         "modals": {
             "delete-model": {
                 "title": "Supprimer le modèle",
-                "desc": "Est-tu sûr de vouloir supprimer le modèle {modelName} ?",
+                "desc": "Es-tu sûr de vouloir supprimer le modèle {modelName} ?",
                 "linked-annotation": "Ce modèle sera supprimé de toutes les versions liées."
             },
             "delete-models": {
                 "title": "Supprimer les modèles",
-                "desc": "Est-tu sûr de vouloir supprimer les {nb} modèles ?",
+                "desc": "Es-tu sûr de vouloir supprimer {nb} modèles ?",
                 "linked-annotation": "Ces modèles seront supprimés de toutes les versions liées."
             },
             "download-models": {
@@ -781,8 +781,8 @@
             "link-models": {
                 "avatar": {
                     "title": "Lier les avatars",
-                    "desc": "La liaison des avatars permet de partager les avatars entre toute les version. Une fois liée, cette version profitera des avatars partagés",
-                    "info": "L'ajout et la suppression d'avatars sera également partagé",
+                    "desc": "La liaison des avatars permet de partager les avatars entre toutes les version. Une fois liée, cette version profitera des avatars partagés",
+                    "info": "L'ajout et la suppression d'avatars seront également partagés",
                     "keep-models": {
                         "label": "Conserver les avatars",
                         "title": "Conserver les avatars déplacera les avatars de la version actuelle dans le dossier des avatars partagés. Dans le cas contraire ils seront perdus"
@@ -791,8 +791,8 @@
                 },
                 "saber": {
                     "title": "Lier les sabres",
-                    "desc": "La liaison des sabres permet de partager les sabres entre toute les version. Une fois liée, cette version profitera des sabres partagés",
-                    "info": "L'ajout et la suppression de sabres sera également partagé",
+                    "desc": "La liaison des sabres permet de partager les sabres entre toutes les version. Une fois liée, cette version profitera des sabres partagés",
+                    "info": "L'ajout et la suppression de sabres seront également partagés",
                     "keep-models": {
                         "label": "Conserver les sabres",
                         "title": "Conserver les sabres déplacera les sabres de la version actuelle dans le dossier des sabres partagés. Dans le cas contraire ils seront perdus"
@@ -801,8 +801,8 @@
                 },
                 "platform": {
                     "title": "Lier les plateformes",
-                    "desc": "La liaison des plateformes permet de partager les plateformes entre toute les version. Une fois liée, cette version profitera des plateformes partagées",
-                    "info": "L'ajout et la suppression de plateformes sera également partagé",
+                    "desc": "La liaison des plateformes permet de partager les plateformes entre toutes les version. Une fois liée, cette version profitera des plateformes partagées",
+                    "info": "L'ajout et la suppression de plateformes seront également partagés",
                     "keep-models": {
                         "label": "Conserver les plateformes",
                         "title": "Conserver les plateformes déplacera les plateformes de la version actuelle dans le dossier des plateformes partagées. Dans le cas contraire ils seront perdus"
@@ -811,8 +811,8 @@
                 },
                 "bloq": {
                     "title": "Lier les bloqs",
-                    "desc": "La liaison des bloqs permet de partager les bloqs entre toute les version. Une fois liée, cette version profitera des bloqs partagés",
-                    "info": "L'ajout et la suppression de bloqs sera également partagé",
+                    "desc": "La liaison des bloqs permet de partager les bloqs entre toutes les version. Une fois liée, cette version profitera des bloqs partagés",
+                    "info": "L'ajout et la suppression de bloqs seront également partagés",
                     "keep-models": {
                         "label": "Conserver les bloqs",
                         "title": "Conserver les bloqs déplacera les bloqs de la version actuelle dans le dossier des bloqs partagés. Dans le cas contraire ils seront perdus"
@@ -862,13 +862,13 @@
         "notifications": {
             "prevent-for-mods": {
                 "title": "Mods nécessaires",
-                "desc": "Assurez-toi d'avoir installé les mods nécessaires pour utiliser des modèles dans BeatSaber",
+                "desc": "Assure-toi d'avoir installé les mods nécessaires pour utiliser des modèles dans Beat Saber",
                 "go-to-mods": "Aller aux mods",
                 "not-remind": "Ne plus me rappeler"
             },
             "prevent-for-models-breaks": {
                 "title": "Modèles cassés",
-                "desc": "Depuis la mise à jour du moteur de BeatSaber, les modèles ne sont plus fonctionnels pour cette version."
+                "desc": "Depuis la mise à jour du moteur de Beat Saber, les modèles ne sont plus fonctionnels pour cette version."
             },
             "export-success": {
                 "title": "Export terminé 🎉"
